--- a/src/css/explorer.css
+++ b/src/css/explorer.css
@@ -37,7 +37,7 @@
   margin-bottom: 20px;
   border: 1px solid #454342;
   border-radius: 4px;
-  color: #ffffff;
+  color: #0c0707;
 }
 
 .inputField::placeholder {
