updates to overview + minor updates

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,4 +1,4 @@
-/**
+/* /* *
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
@@ -41,4 +41,16 @@ img {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.overview-section {
+  transition: all .4s ease;
+}
+
+.overview-section:hover {
+  border: 2px solid #ff4e17 !important;
+}
+
+a.overview-section-link {
+  text-decoration: none !important;
 }
